lib/doctavious-cli/src/cmd/design_decisions/snapshots/doctavious_cli__cmd__design_decisions__adr__tests__should_support_linking_adr.snap
---
source: lib/doctavious-cli/src/cmd/design_decisions/adr.rs
expression: "fs::read_to_string(first).unwrap()"
---
---
authors: 
date: [DATE]
discussion: 
---

# 1. First Record

Date: [DATE]

## Status

Accepted

Amended by [3. Third Record](0003-third-record.md)

## Context

The issue motivating this decision, and any context that influences or constrains the decision.

## Decision

The change that we're proposing or have agreed to implement.

## Consequences

What becomes easier or more difficult to do and any risks introduced by the change that will need to be mitigated.
