lib/doctavious-cli/src/cmd/design_decisions/snapshots/doctavious_cli__cmd__design_decisions__adr__tests__should_support_linking_when_creating_new_adr-2.snap
---
source: lib/doctavious-cli/src/cmd/design_decisions/adr.rs
expression: "fs::read_to_string(second).unwrap()"
---
---
authors: 
date: [DATE]
discussion: 
---

# 2. Second Record

Date: [DATE]

## Status

Accepted

Clarified by [3. Third Record]([DIR]/0003-third-record.md)

## Context

The issue motivating this decision, and any context that influences or constrains the decision.

## Decision

The change that we're proposing or have agreed to implement.

## Consequences

What becomes easier or more difficult to do and any risks introduced by the change that will need to be mitigated.
